[imp] remove fixed settings / info width restraint
-remove status container's 100% width + fixed margins setup and
rely on div's 'display: block' default 100% expansion in natural
rendering flow
-adding padding to adjacent containers to cover the bleeding
from 'status' caused by the necessity to specify '100%' height to
enable vertical overflow
-wrap lower 'select' containers in an absolutely positioned div to
account for the above padding hack

--- a/etherpad-lite.css
+++ b/etherpad-lite.css
@@ -52,7 +52,7 @@ body {
   background-color: #ddd;
   opacity: 0.8;
 }
-#control {
+#control-outer {
   background-color: transparent;
   opacity: 1.0;
 }
@@ -71,7 +71,7 @@ body {
 #epStatus-inner {
   font-size: 0.7em;
   color: red;
-  margin: 10px;
+  padding: 0% 2%;
 }
 
 #epPadName,
